<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryVariant"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="Urban Taxi Logo"
            android:src="@drawable/urban_logo_no_bg" />

        <!-- Welcome Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome_to_urban_taxi"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <!-- Password Field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>
    <!-- ProgressBar overlay -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>
